setup linting and Makefile
Signed-off-by: Alexy Mantha <alexy@mantha.dev>

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,10 @@
 # VSCode History Files
 **/.history
 
+# clangd cache
+.cache/
+
 #################################
 # Miscellaneous Generated Files #
 #################################
-# ADD AS NEED BE
+compile_commands.json
