--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -19,5 +19,5 @@ jobs:
 
       - name: Run dotnet format
         uses: xt0rted/dotnet-format@v1
-        with:
-          only-changed-files: "true"
+        # with:
+        #   only-changed-files: "true"
