--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -2,7 +2,7 @@ name: Format check on pull request
 on: pull_request
 
 permissions:
-  pull-requests: read
+  contents: read
 
 jobs:
   dotnet-format:
@@ -11,13 +11,13 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Add dotnet-format problem matcher
-        uses: xt0rted/dotnet-format-problem-matcher@v1
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 7.0.x
 
-      - name: Restore dotnet tools
-        uses: xt0rted/dotnet-tool-restore@v1
+      - name: Restore dependencies
+        run: dotnet restore
 
-      - name: Run dotnet format
-        uses: xt0rted/dotnet-format@v1
-        # with:
-        #   only-changed-files: "true"
+      - name: Format
+        run: dotnet format --verify-no-changes --verbosity diagnostic
