--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -18,5 +18,8 @@ jobs:
         with:
           dotnet-version: 7.0.x
 
+      - name: Test
+        run: ls -al
+
       - name: Format
         run: dotnet format --verify-no-changes --verbosity diagnostic weeksauce-linux.sln
