--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -22,4 +22,4 @@ jobs:
         run: ls -al
 
       - name: Format
-        run: dotnet format --verify-no-changes --verbosity diagnostic weeksauce-linux.sln
+        run: dotnet format --no-restore --verify-no-changes --verbosity diagnostic weeksauce-linux.sln
