--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,5 +1,11 @@
 name: Actions 😎
 
+permissions:
+  contents: write
+  packages: write
+  issues: write
+  pull-requests: write
+  
 on:
   workflow_dispatch:
     inputs: 
@@ -31,11 +37,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/cache@v3
         with:
           path: Library
@@ -59,6 +60,7 @@ jobs:
   release:
     name: Create release for version ${{ inputs.version }}
     runs-on: ubuntu-latest
+    needs: [build-all-platforms]
     steps:
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
